src/test/deca/codegen/invalid/printmodint0.deca
// Description:
//    Affichage d'une division d'un int par 0 avec modulo.
//
// Resultats:
//    Erreur : Division par 0.
//

{
   int i = 5;
   print(i%0);
}

